# agy-bridge

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  justfile
.github/workflows/: ci.yml
crates/agy-bridge/: Cargo.toml  README.md
crates/agy-bridge-test-support/: Cargo.toml
crates/agy-bridge-test-support/src/: lib.rs
crates/agy-bridge/examples/deep_dives/: agent_middleware.rs  async_chat.rs  doc_maintenance_agent.rs  docstring_maintenance_agent.rs  host_tool_hooks.rs  interactive_cli.rs  multimodal_pipeline.rs  round_based_chat.rs
crates/agy-bridge/examples/getting_started/: agent_skills.rs  app_data_dir_override.rs  autonomous_shell.rs  custom_tools.rs  error_handler.rs  hello_world.rs  hooks.rs  human_in_the_loop.rs  mcp_tools.rs  multimodal.rs  observability.rs  persistence.rs  persona_config.rs  policies.rs  streaming.rs  structured_output.rs  subagents.rs  template_tools.rs  triggers.rs
crates/agy-bridge/examples/getting_started/tools/: search_files.tmpl.md  search_results.tmpl.md
crates/agy-bridge/src/: error.rs  lib.rs  quota.rs  safety.rs  streaming.rs  triggers.rs  types.rs
crates/agy-bridge/src/agent/: mock.rs  mod.rs
crates/agy-bridge/src/agent/mock/: mod.rs  runtime_impl.rs  tests_conversation.rs  tests_lifecycle.rs
crates/agy-bridge/src/config/: agent.rs  capabilities.rs  mcp.rs  mcp_json.rs  mod.rs  models.rs
crates/agy-bridge/src/content/: media.rs  mod.rs  serialization.rs  types.rs
crates/agy-bridge/src/hooks/: interactive.rs  mod.rs  runner.rs  runner_tests.rs  types.rs
crates/agy-bridge/src/policies/: mod.rs  path.rs  pyhook.rs  rules.rs  rules_tests.rs
crates/agy-bridge/src/runtime/: bridge_state.rs  command_loop.rs  config.rs  ffi_dispatch.rs  mod.rs  py_scripts.rs  streaming.rs  tests.rs  venv.rs
crates/agy-bridge/src/runtime/handlers/: agent.rs  async_ops.rs  chat.rs  mod.rs  query.rs
crates/agy-bridge/src/runtime/py/: agent_init.py
crates/agy-bridge/src/streaming/: handle.rs  mod.rs  types.rs  writer.rs
crates/agy-bridge/src/tools/: mod.rs
crates/agy-bridge/tests/: agent_test.rs  ask_user_policy_live_test.rs  audit_regression_test.rs  available_tools_live_test.rs  backend_failure_test.rs  base_url_routing_test.rs  basic_chat_live_test.rs  capabilities_live_test.rs  concurrency_test.rs  concurrent_agents_test.rs  conversation_live_test.rs  error_handling_live_test.rs  features_mock_chat_test.rs  features_mock_hooks_test.rs  features_mock_integration_test.rs  features_mock_multimodal_test.rs  features_mock_policies_test.rs  features_mock_test.rs  features_mock_tools_test.rs  hooks_live_test.rs  integration_live.rs  long_running_live_test.rs  multi_agent_live_test.rs  policy_live_test.rs  quota_integration_test.rs  recoverable_error_test.rs  session_pop_test.rs  stress_safety.rs  tools_live_test.rs  tools_mock_test.rs  trigger_live_test.rs
crates/agy-bridge/tests/common/: mod.rs
crates/agy-bridge/tests/python/: test_agent_init.py
crates/llm-tool/: Cargo.toml  README.md
crates/llm-tool-macros/: Cargo.toml  README.md
crates/llm-tool-macros/src/: lib.rs
crates/llm-tool/src/: registry.rs  rust_tool.rs  types.rs
scripts/: lint_hygiene.py
