[workspace]
members = ["crates/agy-bridge"]
resolver = "3"

[workspace.dependencies]
# workspace crates
agy-bridge = { path = "crates/agy-bridge", version = "0.1.4" }
llm-tool = { path = "../llm-tool" }
llm-tool-macros = { path = "../llm-tool/crates/llm-tool-macros" }

# runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "process",
  "fs",
  "io-util",
] }
tokio-stream = "0.1"
futures = "0.3"

# python
pyo3 = { version = "0.22", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
pythonize = "0.22"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# proc-macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.7"

# utilities
thiserror = "1"
tracing = "0.1"
base64 = "0.22"
typed-builder = "0.20"
fast_rands = "0.15"

# dev / testing
tempfile = "3"
trybuild = "1"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"
