[workspace]
members = ["crates/agy-bridge", "crates/agy-bridge-test-support"]
resolver = "3"

[workspace.dependencies]
# workspace crates
agy-bridge = { path = "crates/agy-bridge", version = "0.8.0" }
agy-bridge-test-support = { path = "crates/agy-bridge-test-support" }
llm-tool = { version = "0.8.0" }
llm-tool-macros = { version = "0.8.0" }

# runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "process",
  "fs",
  "io-util",
] }
tokio-stream = "0.1"
futures = "0.3"

# python
pyo3 = { version = "0.29", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
pythonize = "0.29"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# proc-macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.11"

# utilities
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
typed-builder = "0.23"
fast_rands = "0.15"

# dev / testing
tempfile = "3"
trybuild = "1"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"
