[package]
name = "agy-bridge-test-support"
version = "0.8.2"
edition = "2024"
rust-version = "1.95"
description = "Shared mock-server test infrastructure for agy-bridge integration tests"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
agy-bridge = { workspace = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }

[features]
md-tmpl = ["agy-bridge/md-tmpl"]

[lints]
workspace = true
