[package]
name = "llm-tool-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Proc macros for llm-tool (#[llm_tool] attribute)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/agy-bridge"
readme = "README.md"
keywords = ["llm", "tool", "proc-macro", "function-calling", "agent"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
convert_case.workspace = true

[lints]
workspace = true
