[package]
name = "llm-tool"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Framework-agnostic Rust tool definitions for LLM agents"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/agy-bridge"
readme = "README.md"
keywords = ["llm", "tool", "agent", "function-calling"]
categories = ["api-bindings"]

[dependencies]
llm-tool-macros.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "sync", "fs"] }
tempfile.workspace = true
futures.workspace = true
trybuild.workspace = true

[lints]
workspace = true
